avoid db lock with DBUtils, formatting